# PRisme-ROS

./: .gitattributes  README.md
imu_gazebo/: CMakeLists.txt  package.xml
imu_gazebo/include/: gazebo_ros_imu_sensor.h
imu_gazebo/src/: gazebo_ros_imu_sensor.cpp
light_sensor_gazebo/: CMakeLists.txt  package.xml
light_sensor_gazebo/include/: light_sensor_plugin.h
light_sensor_gazebo/src/: light_sensor_plugin.cpp
prisme_command/: CMakeLists.txt  package.xml
prisme_command/launch/: line.launch  mapping.launch  obstacles.launch
prisme_command/src/: explorer.py  ir_point_cloud.py  ir_to_pointcloud.py  line_follower.py  obstacles.py
prisme_control/: CMakeLists.txt  package.xml
prisme_control/config/: prisme_control.yaml  prisme_control_diff.yaml  prisme_control_vel.yaml
prisme_control/launch/: line.launch  obstacles.launch  prisme_control.launch
prisme_control/src/: line_follower.py  obstacles.py
prisme_description/: CMakeLists.txt  package.xml
prisme_description/launch/: prisme.rviz  prisme_old.rviz  prisme_rviz.launch
prisme_description/meshes/: body.dae  body.f3d  simplified_body.f3d  simplified_body_v1.stl  simplified_body_v2.stl  wheel.dae  wheel.f3d
prisme_description/urdf/: prisme.gazebo  prisme.xacro
prisme_firmware/: CMakeLists.txt  package.xml
prisme_firmware/arduino_firmware/: arduino_firmware.ino  config.h
prisme_gazebo/: CMakeLists.txt  package.xml
prisme_gazebo/launch/: prisme_light.launch  prisme_line.launch  prisme_obstacles.launch  prisme_world.launch
prisme_gazebo/meshes/: line_following_1.dae  line_following_1.stl
prisme_gazebo/models/: camera.sdf
prisme_gazebo/src/: light_sensor_plugin.cpp
prisme_gazebo/worlds/: arena_light.world  arena_line.world  arena_obstacles.world
