<?xml version="1.0"?>
<package>
  <name>light_sensor_gazebo</name>
  <version>0.0.0</version>
  <description>The light_sensor_gazebo package</description>
  <maintainer email="paul.edouard.sarlin@gmail.com">Paul-Edouard Sarlin</maintainer>
  
	<license>BSD</license>

  <author email="paul.edouard.sarlin@gmail.com">Paul-Edouard Sarlin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
