<?xml version="1.0"?>
<package>
  <name>prisme_control</name>
  <version>0.0.0</version>
  <description>The prisme_control package</description>

  <maintainer email="paul.edouard.sarlin@gmail.com">Paul-Edouard Sarlin</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/prisme_control</url> -->
  <author email="paul.edouard.sarlin@gmail.com">Paul-Edouard Sarlin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>

  <export>
  </export>
</package>
