<?xml version="1.0"?>
<package>
  <name>prisme_description</name>
  <version>0.0.0</version>
  <description>The prisme_description package</description>
  <maintainer email="paul.edouard.sarlin@gmail.com">Paul-Edouard Sarlin</maintainer>

  <license>BSD</license>

  <author email="paul.edouard.sarlin@gmail.com">Paul-Edouard Sarlin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
