<package>
  <name>prisme_gazebo</name>
  <version>0.1.0</version>
  <description>prisme_gazebo</description>
  <maintainer email="paul.edouard.sarlin@gmail.com">Paul-Edouard Sarlin</maintainer>

  <license>BSD</license>

  <author email="paul.edouard.sarlin@gmail.com">Paul-Edouard Sarlin</author>

  <buildtool_depend>catkin</buildtool_depend>

	<build_depend>libgazebo5-dev</build_depend>

	<run_depend>gazebo5</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>prisme_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
				gazebo_model_path="${prefix}/.." /> 
  </export>
</package>
